Horizonriver QA20-Mar-2017/src/objects/Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CP_IMEI__c</fullName>
        <label>CP IMEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_MAC__c</fullName>
        <label>CP MAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Circuit_10__c</fullName>
        <label>Circuit 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Speed__c</fullName>
        <label>Circuit Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cutover_Date__c</fullName>
        <label>Cutover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cutover_Process_Completion_Date__c</fullName>
        <label>Cutover Process Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HW_MAC__c</fullName>
        <label>HW MAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Name__c</fullName>
        <label>HW Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Serial__c</fullName>
        <label>HW Serial #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modem_Validation_Date__c</fullName>
        <label>Modem Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P4_Install_Date__c</fullName>
        <label>P4 Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Survey__c</fullName>
        <label>Site Survey</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Pin__c</fullName>
        <label>Support Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VZ_CARD__c</fullName>
        <label>VZ CARD #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Implementation</label>
    <nameField>
        <label>Implementation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>